<resources>
    <string name="app_name">MaterialComputadores</string>
    <string name="action_settings">Settings</string>
    <string name="marca">Marca</string>
    <string name="ram">Ram</string>
    <string name="color">Color</string>
    <string name="tipo">Tipo</string>
    <string name="sistema_operativo">Sistema Operativo</string>
    <string name="guardar">Guardar</string>
    <string name="none">------</string>
    <string name="limpiar">Limpiar</string>
    <string name="hp">HP</string>
    <string name="lenovo">Lenovo</string>
    <string name="asus">Asus</string>
    <string name="dell">Dell</string>


    <string-array name="marcas">
        <item>@string/none</item>
        <item>@string/hp</item>
        <item>@string/lenovo</item>
        <item>@string/asus</item>
        <item>@string/dell</item>
    </string-array>

    <string name="negro">Negro</string>
    <string name="plateado">Plateado</string>
    <string name="blanco">Blanco</string>

    <string-array name="colores">
        <item>@string/none</item>
        <item>@string/negro</item>
        <item>@string/plateado</item>
        <item>@string/blanco</item>
    </string-array>

    <string name="ordenador">Ordenador</string>
    <string name="laptop">Laptop</string>
    <string name="ultrabook">UltraBook</string>

    <string-array name="tipos">
        <item>@string/none</item>
        <item>@string/ordenador</item>
        <item>@string/laptop</item>
        <item>@string/ultrabook</item>
    </string-array>

    <string name="win">Windows</string>
    <string name="linux">Linux</string>

    <string-array name="sos">
        <item>@string/none</item>
        <item>@string/win</item>
        <item>@string/linux</item>
    </string-array>

    <string name="mensaje_guardado_exitoso">Computador guardado Exitosamente</string>
    <string name="detalle">Detalle</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>

    <string name="positivo">Si</string>
    <string name="negativo">No</string>
    <string name="pregunta_eliminacion">¿Seguro que desea eliminar a este computador?</string>
    <string name="error_ram_vacio">Debe digitar un valor</string>
    <string name="error_combo_vacio">Debe seleccionar un valor</string>
    <string name="nuevo">Nuevo Computador</string>
</resources>
