<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    tools:context="com.kevinmcr.materialcomputadores.CrearComputador"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:text="@string/marca"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteY="511dp" />

        <Spinner
            android:id="@+id/spnrMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="511dp" />
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtRam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ram"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvColor"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/color"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spnrColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTipo"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tipo"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spnrTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvSo"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sistema_operativo"
            android:textAlignment="textStart"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spnrSo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGuardar"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="guardar"
        android:text="@string/guardar" />

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="limpiar"
        android:text="@string/limpiar" />

</LinearLayout>
